# todo

./: .gitignore  .gitpod.yml  .rustfmt.toml  Cargo.toml  bacon.toml  todo-update
app/: Cargo.toml
app/src/: block.rs  block_test.rs  bottom.rs  bottom_test.rs  budget.rs  budget_test.rs  chain.rs  chain_test.rs  check.rs  check_test.rs  clean_test.rs  due.rs  due_test.rs  edit.rs  edit_test.rs  find.rs  find_test.rs  get.rs  get_test.rs  lib.rs  log.rs  log_test.rs  merge.rs  merge_test.rs  new.rs  new_test.rs  path.rs  path_test.rs  prefix.rs  prefix_test.rs  priority.rs  priority_test.rs  punt.rs  punt_test.rs  put.rs  put_test.rs  restore.rs  restore_test.rs  rm.rs  rm_test.rs  (+20 more)
app/src/tests/: block_test.rs  chain_test.rs  clean_test.rs  due_test.rs  edit_test.rs  new_test.rs  path_test.rs  punt_test.rs  put_test.rs  restore_test.rs  rm_test.rs  split_test.rs  testing.rs  top_test.rs  unsnooze_test.rs
builtin_apps/: Cargo.toml
builtin_apps/src/: all.rs  block.rs  bottom.rs  budget.rs  chain.rs  check.rs  clean.rs  due.rs  edit.rs  find.rs  get.rs  lib.rs  log.rs  merge.rs  new.rs  path.rs  priority.rs  punt.rs  put.rs  restore.rs  rm.rs  snooze.rs  snoozed.rs  split.rs  status.rs  tag.rs  top.rs  unblock.rs  unsnooze.rs  util.rs
builtin_apps/src/tests/: block_test.rs  bottom_test.rs  budget_test.rs  chain_test.rs  check_test.rs  clean_test.rs  due_test.rs  edit_test.rs  find_test.rs  get_test.rs  log_test.rs  merge_test.rs  new_test.rs  path_test.rs  priority_test.rs  punt_test.rs  put_test.rs  restore_test.rs  rm_test.rs  snooze_test.rs  snoozed_test.rs  split_test.rs  status_test.rs  tag_test.rs  testing.rs  top_test.rs  unblock_test.rs  unsnooze_test.rs  util_test.rs
cli/: Cargo.toml
cli/src/: lib.rs  options.rs  options_test.rs  subcommand.rs  testing.rs  time_utils.rs  value_parsers.rs
cli/src/subcommands/: block.rs  block_test.rs  bottom.rs  bottom_test.rs  budget.rs  budget_test.rs  chain.rs  chain_test.rs  check.rs  check_test.rs  clean.rs  config.rs  config_test.rs  due.rs  due_test.rs  edit.rs  edit_test.rs  find.rs  find_test.rs  get.rs  get_test.rs  merge.rs  merge_test.rs  mod.rs  new.rs  new_test.rs  path.rs  path_test.rs  prefix.rs  prefix_test.rs  priority.rs  priority_test.rs  punt.rs  punt_test.rs  put.rs  put_test.rs  restore.rs  restore_test.rs  rm.rs  rm_test.rs  (+14 more)
cli/src/subcommands/tests/: block_test.rs  bottom_test.rs  budget_test.rs  chain_test.rs  check_test.rs  config_test.rs  due_test.rs  edit_test.rs  find_test.rs  get_test.rs  merge_test.rs  new_test.rs  path_test.rs  priority_test.rs  punt_test.rs  put_test.rs  restore_test.rs  rm_test.rs  snooze_test.rs  snoozed_test.rs  split_test.rs  tag_test.rs  top_test.rs  unblock_test.rs  unsnooze_test.rs
clock/: Cargo.toml
clock/src/: lib.rs
config/: Cargo.toml
config/src/: lib.rs
long_output/: Cargo.toml
long_output/src/: lib.rs  test.rs
lookup_key/: Cargo.toml
lookup_key/src/: lib.rs  test.rs
main/: Cargo.toml
main/src/: less.rs  main.rs
model/: Cargo.toml
model/src/: duration.rs  layering.rs  lib.rs  persist.rs  task.rs  task_id.rs  task_set.rs  task_status.rs  task_test.rs  todo_list.rs
model/src/todo_list_test/: basic_test.rs  block_test.rs  budget_test.rs  check_test.rs  deps_test.rs  due_date_test.rs  get_test.rs  iter_test.rs  lookup_by_number_test.rs  mod.rs  position_test.rs  priority_test.rs  punt_test.rs  reload_test.rs  remove_test.rs  restore_test.rs  set_desc_test.rs  snooze_test.rs  status_test.rs  tag_test.rs
printing/: Cargo.toml
printing/src/: brief_printable_task.rs  format_util.rs  lib.rs  printable_error.rs  printable_info.rs  printable_info_test.rs  printable_result_test.rs  printable_task.rs  printable_task_test.rs  printable_warning.rs  printable_warning_test.rs  scripting_todo_printer.rs  simple_todo_printer.rs  simple_todo_printer_test.rs  testing.rs  testing_test.rs  todo_printer.rs  truncate.rs
printing/src/tests/: printable_error_test.rs  printable_result_test.rs  printable_task_test.rs  printable_warning_test.rs  simple_todo_printer_test.rs  truncate_test.rs
runner/: Cargo.toml
runner/src/: less.rs  lib.rs
src/: app.rs  app_test.rs  cli.rs  cli_test.rs  clock.rs  config.rs  lib.rs  long_output.rs  long_output_test.rs  main.rs  model.rs  model_test.rs  printing.rs  printing_test.rs  text_editing.rs  text_editing_test.rs  time_format.rs  time_format_test.rs
src/app/: block.rs  block_test.rs  budget.rs  budget_test.rs  chain.rs  chain_test.rs  check.rs  check_test.rs  due.rs  due_test.rs  edit.rs  edit_test.rs  find.rs  find_test.rs  get.rs  get_test.rs  log.rs  log_test.rs  merge.rs  merge_test.rs  mod.rs  new.rs  new_test.rs  path.rs  path_test.rs  prefix.rs  prefix_test.rs  priority.rs  priority_test.rs  punt.rs  punt_test.rs  put.rs  put_test.rs  restore.rs  restore_test.rs  rm.rs  rm_test.rs  snooze.rs  snooze_test.rs  snoozed.rs  (+15 more)
src/cli/: key.rs  key_test.rs  mod.rs  options.rs  options_test.rs  subcommand.rs  testing.rs
src/cli/subcommands/: block.rs  block_test.rs  budget.rs  budget_test.rs  chain.rs  chain_test.rs  check.rs  check_test.rs  config.rs  config_test.rs  due.rs  due_test.rs  edit.rs  edit_test.rs  find.rs  find_test.rs  get.rs  get_test.rs  merge.rs  merge_test.rs  mod.rs  new.rs  new_test.rs  path.rs  path_test.rs  prefix.rs  prefix_test.rs  priority.rs  priority_test.rs  punt.rs  punt_test.rs  put.rs  put_test.rs  restore.rs  restore_test.rs  rm.rs  rm_test.rs  snooze.rs  snooze_test.rs  snoozed.rs  (+9 more)
src/model/: layering.rs  mod.rs  persist.rs  task.rs  task_set.rs  todo_list.rs
src/printing/: brief_printable_task.rs  format_util.rs  mod.rs  printable_error.rs  printable_error_test.rs  printable_task.rs  printable_task_test.rs  printable_warning.rs  printable_warning_test.rs  scripting_todo_printer.rs  simple_todo_printer.rs  simple_todo_printer_test.rs  testing.rs  testing_test.rs  todo_printer.rs
testing/: Cargo.toml
testing/src/: lib.rs
text_editing/: Cargo.toml
text_editing/src/: lib.rs  test.rs
time_format/: Cargo.toml
time_format/src/: lib.rs  test.rs
(+18 files in other folders)
