[workspace]
resolver = "2"
members = ["main"]

[workspace.dependencies]
# cratets.io dependencies
ansi_term = "0.12"
bisection = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0.*", features = ["derive"] }
daggy = { version = "0.8", features = ["serde-1", "stable_dag"] }
directories = "5.0"
humantime = "2.1"
itertools = "0.11"
pretty_assertions = "1.1"
scrawl = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.1.0"
term_size = "0.3"
textwrap = "0.16.0"
thiserror = "1.0.30"

# Local dependencies
app = { path = "app" }
cli = { path = "cli" }
clock = { path = "clock" }
config = { path = "config" }
lookup_key = { path = "lookup_key" }
main = { path = "main" }
model = { path = "model" }
printing = { path = "printing" }
testing = { path = "testing" }
text_editing = { path = "text_editing" }
time_format = { path = "time_format" }

[profile.dev]
split-debuginfo = "packed"
debug = true
