[workspace]
resolver = "2"
members = ["main"]

[workspace.dependencies]
# cratets.io dependencies
bisection = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0.*", features = ["derive"] }
daggy = { version = "0.8", features = ["serde-1", "stable_dag"] }
directories = "5.0"
humantime = "2.1"
itertools = "0.12"
pretty_assertions = "1.1"
scrawl = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.1.0"
terminal_size = "0.3"
textwrap = "0.16.0"
thiserror = "1.0.30"
yansi = "1.0.0-gamma"

# Local dependencies
todo_app = { path = "app" }
todo_builtin_apps = { path = "builtin_apps" }
todo_cli = { path = "cli" }
todo_clock = { path = "clock" }
todo_config = { path = "config" }
todo_lookup_key = { path = "lookup_key" }
todo_model = { path = "model" }
todo_printing = { path = "printing" }
todo_runner = { path = "runner" }
todo_testing = { path = "testing" }
todo_text_editing = { path = "text_editing" }
todo_time_format = { path = "time_format" }

[profile.dev]
split-debuginfo = "packed"
debug = true
