[workspace]
resolver = "2"
members = ["main"]

[workspace.dependencies]
# cratets.io dependencies
bisection = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
daggy = { version = "0.8", features = ["serde-1", "stable_dag"] }
directories = "5.0"
either = "1.12"
humantime = "2.1"
itertools = "0.13"
pretty_assertions = "1.4"
scrawl = "2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shlex = "1.3.0"
terminal_size = "0.3"
textwrap = "0.16.0"
thiserror = "1.0"
yansi = "1.0"

# Local dependencies
todo_app = { path = "app" }
todo_builtin_apps = { path = "builtin_apps" }
todo_cli = { path = "cli" }
todo_clock = { path = "clock" }
todo_config = { path = "config" }
todo_lookup_key = { path = "lookup_key" }
todo_model = { path = "model" }
todo_printing = { path = "printing" }
todo_runner = { path = "runner" }
todo_testing = { path = "testing" }
todo_text_editing = { path = "text_editing" }
todo_time_format = { path = "time_format" }

[profile.dev]
split-debuginfo = "packed"
debug = true
