[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "4.0.*"
humantime = "2.1"
itertools = "0.10"
shlex = "1.1.0"

cli = { path = "../cli" }
clock = { path = "../clock" }
lookup_key = { path = "../lookup_key" }
model = { path = "../model" }
printing = { path = "../printing" }
testing = { path = "../testing" }
text_editing = { path = "../text_editing" }
time_format = { path = "../time_format" }