[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
clap.workspace = true
humantime.workspace = true
itertools.workspace = true
shlex.workspace = true

cli.workspace = true
clock.workspace = true
lookup_key.workspace = true
model.workspace = true
printing.workspace = true
testing.workspace = true
text_editing.workspace = true
time_format.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
