[package]
name = "todo_builtin_apps"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
clap.workspace = true
humantime.workspace = true
itertools.workspace = true

todo_app.workspace = true
todo_cli.workspace = true
todo_clock.workspace = true
todo_lookup_key.workspace = true
todo_model.workspace = true
todo_printing.workspace = true
todo_testing.workspace = true
todo_text_editing.workspace = true
todo_time_format.workspace = true

[dev-dependencies]
todo_cli = { path = "../cli", features = ["test-utils"] }
pretty_assertions.workspace = true
serde_json.workspace = true
shlex.workspace = true
