[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
directories.workspace = true
serde_json.workspace = true
term_size.workspace = true
thiserror.workspace = true

app.workspace = true
cli.workspace = true
clock.workspace = true
config.workspace = true
model.workspace = true
printing.workspace = true
text_editing.workspace = true
