[package]
name = "model"
version = "0.1.0"
authors = ["Simeon <simeon.anfinrud@mac.com"]

[dependencies]
bisection = "0.1"
chrono = { version = "0.4", features = ["serde"] }
daggy = { version = "0.8", features = ["serde-1", "stable_dag"] }
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
