[package]
name = "todo_model"
edition = "2021"
version = "0.1.0"
authors = ["Simeon <simeon.anfinrud@mac.com"]

[dependencies]
bisection.workspace = true
chrono.workspace = true
daggy.workspace = true
itertools.workspace = true
serde.workspace = true
serde_derive.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true

todo_testing.workspace = true
